--- a/NetCoreB2C/appsettings.json
+++ b/NetCoreB2C/appsettings.json
@@ -1,15 +1,15 @@
 {
   "Authentication": {
     "AzureAdB2C": {
-      "ClientId": "9959b8d0-8ba8-41e3-9ceb-cc3428250bdb",
-      "Tenant": "testB2CTenant05.onmicrosoft.com",
-      "SignUpSignInPolicyId": "B2C_1_test",
-      "ResetPasswordPolicyId": "B2C_1_test2",
-      "EditProfilePolicyId": "B2C_1_test1",
-      "RedirectUri": "https://localhost:44381/signin-oidc",
-      "ClientSecret": "7_dVG6OP^6B^dGb4j8p8}zd:",
+      "ClientId": "90c0fe63-bcf2-44d5-8fb7-b8bbc0b29dc6",
+      "Tenant": "fabrikamb2c.onmicrosoft.com",
+      "SignUpSignInPolicyId": "b2c_1_susi",
+      "ResetPasswordPolicyId": "b2c_1_reset",
+      "EditProfilePolicyId": "b2c_1_edit_profile",
+      "RedirectUri": "http://localhost:5000/signin-oidc",
+      "ClientSecret" : "v0WzLXB(uITV5*Aq",
       "ApiUrl": "https://fabrikamb2chello.azurewebsites.net/hello",
-      "ApiScopes": "https://testB2CTenant05.onmicrosoft.com/demoapi/read"
+      "ApiScopes": "https://fabrikamb2c.onmicrosoft.com/demoapi/demo.read"
     }
   },
   "Logging": {
