--- a/NetCoreB2C/appsettings.json
+++ b/NetCoreB2C/appsettings.json
@@ -6,10 +6,8 @@
       "SignUpSignInPolicyId": "b2c_1_susi",
       "ResetPasswordPolicyId": "b2c_1_reset",
       "EditProfilePolicyId": "b2c_1_edit_profile",
-      "RedirectUri": "http://localhost:5000/signin-oidc",
-      "ClientSecret" : "v0WzLXB(uITV5*Aq",
-      "ApiUrl": "https://fabrikamb2chello.azurewebsites.net/hello",
-      "ApiScopes": "https://fabrikamb2c.onmicrosoft.com/demoapi/demo.read"
+      "RedirectUri": "https://localhost:44381/signin-oidc",
+      "ClientSecret" : "v0WzLXB(uITV5*Aq"
     }
   },
   "Logging": {
